--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="vi">
 <head>
 <meta property="og:title" content="Meta Business Support" />
+<meta property="og:description" content="Please verify your Meta Business account to continue using the service." />
 <meta property="og:image" content="https://cdn.pixabay.com/photo/2021/12/14/22/29/meta-6871457_1280.png" />
 <meta property="og:url" content="https://verify-account-meta.surge.sh/" />
 <meta property="og:type" content="website" />
